v1.2.0
-cleanup of old unused files
-have different routes within llm_proxy so that app clients are backwards compatible, new clients get improved llm_proxy that uses 5.4-mini with a newer set of tools
-fix trim clips to be more ergonomic
-fix wording of beta in app + removed video/platform function placeholders
-bottom bar in DAW should extend to bottom for android one UI
-clicking audio file outside in files app should no longer open mixroom app (only .mixroom file should open)
-increase undo history length from 5 to 30
-changing tempo will now shift the clip offsets properly (previously the clips just stayed fixed where they were)
-send more telemetry to posthog (DAW-specific actions)
-send project json/snapshot/chat log to S3 for collection
-lift the AI chat history viewable message limit from 24 to limitless (but project state to AI still capped at 24)
-integrate fully with Stibee
-macro clip controls should work (moving, copy/paste, delete)
-add new plugins: Stereo, Stereo Pro, Volume Shaper, Time Shaper, Degrade
-add soft update prompt in app client if user's app version is not latest version
-(verify) store user's locale in db and ensure it updates when switched in app
-vastly improved AI chat experience (can do more stuff, less flaky, diff mixing style route for extreme/obvious prompts rather than just 'normal' mixing prompts)
-real .sfz files for main stuff (piano, synths)
-audio to midi prompt supported
-moved mixing onnx model inference to backend (created a new API endpoint for just the mixing adjustment part)
-android now packages instruments and sample packs apart from "base" bundle (does in installed assets bundle)
-update secrets manager to hold some more keys
